--- a/Insert/form.html
+++ b/Insert/form.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Madhu Birthday hunt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
         * {
@@ -63,7 +64,7 @@
         <center>
             <h1>Birthday hunt</h1>
         </center>
-        <form action="./insert.php" method="POST" enctype="multipart/form-data" autocomplete="on">
+        <form action="./Quesinsert.php" method="POST" enctype="multipart/form-data" autocomplete="on">
 
 
 
@@ -202,6 +203,7 @@
                     <input required type="text" id="phone" name="phone" placeholder="Phone number" />
                 </div>
             </div>
+            <!--
             <label for="photo">Photo of you and me </label><br>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ7UZV-tbaFPjmJLW_Cy9kGC0HmBE86xg0r2vI6YamM7ueIFx6E&usqp=CAU" width="260px" height="190px" /><br>
             <br>
@@ -209,12 +211,14 @@
             <input required type="file" name="fileToUpload" id="fileToUpload" style="color: red;font-weight: bolder;font-size: medium;">
 
             <div id="filesizewarning" style="color: red;font-weight: bolder;font-size: large;"></div>
+
+            -->
             <input type="submit" value="Submit" name="submit" id="mySubmit" />
         </form>
     </div>
 
 
-
+<!--
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
         $('#fileToUpload').bind('change', function() {
@@ -231,6 +235,7 @@
             }
         });
     </script>
+    -->
 </body>
 
 </html>
