UI element for Questions card added in /components folder

--- a/index.html
+++ b/index.html
@@ -3,31 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Madhu</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
     <script
-    src="https://code.jquery.com/jquery-3.5.0.js"
-    integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
-    crossorigin="anonymous"
-  ></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
-    <script src="./script.js"></script>
-
+      src="https://code.jquery.com/jquery-3.5.0.js"
+      integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <section class="container">
-      <h1>
-        <span class="title">Happy</span>
-        <span class="title">Birthday</span>
-      </h1>
-    </section>
-    <div class="home-area" id="particles-js"></div>
-  
-    
-    <script src="./particles.js"></script>
-    <script src="./app.js"></script>
+    <canvas id="canvas"></canvas>
+
+    <canvas id="c"></canvas>
+
+    <script src="./script.js"></script>
   </body>
 </html>
