--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>HBD Madhu</title>
+    <title>HBD Alice</title>
     <link
       type="image/x-icon"
       rel="icon"
@@ -24,8 +24,8 @@
   <body>
     <div id="particles-js"></div>
     <div class="container">
-      <div class="hbd text-focus-in">Feliz 21 cumpleaños</div>
-      <div class="name slide-in-fwd-center">Madhu</div>
+      <div class="hbd text-focus-in">Feliz 22 cumpleaños</div>
+      <div class="name slide-in-fwd-center">Alice</div>
     </div>
     <script src="./particles.js"></script>
     <script src="./app.js"></script>
